# coursework_agency

./: CMakeLists.txt  Database.cpp  Database.h  Deals.cpp  Deals.h  HashTableDeals.cpp  HashTableDeals.h  HashTableRealtors.cpp  HashTableRealtors.h  LICENSE  List.h  ListDeals.cpp  ListDeals.h  ListRealtors.cpp  ListRealtors.h  Parser.cpp  Parser.h  README.md  Realtors.cpp  Realtors.h  Structures.cpp  Structures.h  ToString.cpp  ToString.h  TreeDeals.cpp  TreeDeals.h  TreeRealtors.cpp  TreeRealtors.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
